src/app/photography-page/photography-grid/photography-grid.component.scss
:host {
	user-select: none; /* standard syntax */
    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
    -moz-user-select: none; /* mozilla browsers */
    -khtml-user-select: none; /* webkit (konqueror) browsers */
    -ms-user-select: none; /* IE10+ */
}

#view-selection {
	position: absolute;
	top:0;
	right: 0;
	margin: 20px;
	font-size: 0.8rem;
	.option.selected {
		color: var(--hovered-color);
	}
}

#grid-view {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	padding-top: 30px;
	max-width: 1200px;
	margin-left: auto;
	margin-right: auto;

	&.background-grid {
		overflow: hidden;
	}

	.grid-cell {
		height: 300px;
		width: 300px;
		margin: 20px;

		.square-img-container {
			margin: 0 auto;
			height: 300px;
			width: 300px;

			overflow: hidden;
			cursor: pointer;
			position: relative;

			img, video {
				width: 100%;
				height: 100%;
				object-fit: cover;
				object-position: center center;
			}
		}

		@media (hover: hover) {
			.square-img-container img, video  {
				transition: width 0.2s, height 0.2s, margin-left 0.2s, margin-top 0.2s;
			}
			&:hover {
				.square-img-container {
					box-shadow: 0 0 35px 5px rgba(white, 0.1);
					img, video  {
						width: 102% !important;
						height: 102% !important;
						margin-left: -1%;
						margin-top: -1%;
					}
				}
			}
		}
	}
}

#list-view {
	padding: 50px 20px;

	&.background-grid {
		overflow: hidden;
	}
	.list-element {
		margin-left: auto;
		margin-right: auto;
		text-align: center;
		max-width: 1000px;
		margin: 20px auto;

		img, app-video-player {
			box-sizing: border-box;
			cursor: pointer;
			max-width: 100%;
			max-height: 90vh;
			object-fit:contain;
		}
	}

}

